fix failed test